--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,85 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  justify-content: space-between;
+  flex-wrap: wrap;
+ 
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+
+
+.logo_place_header{
+  position: absolute;
+  top: 30px;
+  left: 60px;
+  height: 32px;
+  width: 183px;
+  z-index: 3;
+ 
+}
+
+
+.header__title{
+  display: flex;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+  position: relative;
+  width: 730px;
+  z-index: 3;
+  left: 64px;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 25px;
+  z-index: 3;
+  
+}
+
+.header__main-illustration {
+  height: 608px;
+  width: 765px;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  z-index: 2;
+  
+}
+
+
 .header__square-pic {
+  display: flex;
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  background-color: #2f80ed;
+  right: 0px;
+  z-index: 1;
+  margin: auto;
+ 
 }
+
+
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
