--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,8 @@
 }
 
 .description{
-  margin-top: 100px;
+  padding-top: 0px;
+  margin: 0 auto;
   
 }
 .description__two-columns{
@@ -89,36 +90,52 @@
   flex-wrap: wrap;
   position: relative;
   width: 80vw;*/
-  white-space: nowrap;
-}
+  display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+  width: 80vw;
+  margin-bottom: 100px;
+  margin-top: 100px;
+ }
 
 .description__brief{
+  display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
   column-width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
-  white-space: normal;	
-	display: inline-block;
+  color:  #2f80ed;
+  
 }
 
 .description__main-text{
-  column-width: 80vw;
+  display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 2;
+  width: 80vw;
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
-  margin-left: 175px;
+  /*margin-left: 175px;*/
   margin-right: 4%;
 }
 
 .description_main-text_paragraph{
-  margin-bottom: 10px;
-
+  margin-bottom: 10px:
+}
+.description_main-text_paragraph_bold{
+  margin-bottom: 10px:
 }
 
 .digits{
   margin: 100px auto;
   padding-top: 60px;
   width: 1100px;
+  
 
 }
 .digits-title{
@@ -260,9 +277,9 @@
   height: 877px;
   width: 877px;
   position: absolute;
-  bottom: 0px;
   z-index: 1;
-  right: -210px;
+  margin-right: -210px;
+  margin-bottom: 0px;
   
 }
 
@@ -274,6 +291,7 @@
  margin-right: auto;
  margin-bottom: 90px;
  list-style: none;
+ z-index: 10;
  
 
 }
@@ -282,12 +300,14 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 10;
 
 }
 .table__cell_text_dark{
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
+  z-index: 10;
  
 }
 
@@ -296,9 +316,104 @@
   font-style: bold;
   line-height: 1.15;
   font-size: 24px;
+  z-index: 10;
 
  }
 
+ .footer{
+   padding-top: 60px;
+   padding-bottom: 90px;
+   background-color: black;
+ }
+.footer__columns{
+   display: flex;
+   flex-basis: 711px;
+   width: 90%;
+   padding-top: 60px;
+   padding-bottom: 40px;
+   min-height: 350px;
+   flex-direction: row;
+	 flex-wrap: wrap;
+   
+}
+/*.footer__columns_right{
+  width: 50%;
+  left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+}
+.footer__columns_left{
+  width: 50%;
+  right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;}*/
+
+ .footer__columns_content_copyright{
+  width: 50%;
+  left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  position: relative;
+ }
+ .footer__columns_content_social{
+  margin-left: 0px;
+  display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
+ }
+ .footer__columns_content_info{
+  display: flex;
+	flex-direction: column;
+	flex-basis: 100%;
+	flex: 1;
+   margin-left: 40%;
+ }
+ .logo_place_footer{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 35px;
+  width: 183px;
+  z-index: 3;
+}
+
+.footer__autor{
+  margin-top: 18px;
+  margin-bottom: 18px;
+  margin-left: 0px;
+  font-style: normal;
+  line-height: 30px;
+  font-size: 18px;
+  color: white;
+}
+.footer__column-heading{
+  margin-bottom: 20px;
+  font-style: bold;
+  line-height: 25px;
+  font-size: 18px;
+  color: white;
 
 
+}
+.footer__column-links{
+  font-style: normal;
+  line-height: 30px;
+  font-size: 18px;
+  color: white;
+
+}
+.footer__social-icon{
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+  color: white;
+
+}
+.footer__column-link{
+  padding-bottom: 16px;
+  height: 60%;
+  color: white;
+}
 
