--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+a{
+  text-decoration: none; 
+}
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -18,7 +21,9 @@
   flex-wrap: wrap;
  
 }
-
+.header__subtitle_link{
+  color: #2f80ed;
+}
 
 
 .logo_place_header{
@@ -51,8 +56,7 @@
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
-  z-index: 3;
-  
+  z-index: 3; 
 }
 
 .header__main-illustration {
@@ -79,39 +83,36 @@
  
 }
 
-.description{
-  padding-top: 0px;
-  margin: 0 auto;
-  
+.description{  
+  margin-top: 100px;
 }
 .description__two-columns{
-  /*display: inline-block;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: relative;
-  width: 80vw;*/
   display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
   width: 80vw;
-  margin-bottom: 100px;
-  margin-top: 100px;
- }
+  justify-content: space-between;
+  margin: 0px auto;
+  
+}
 
-.description__brief{
+.description__two-columns_brief{
   display: flex;
 	flex-direction: column;
 	flex-basis: 100%;
 	flex: 1;
-  column-width: 175px;
+  width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
   color:  #2f80ed;
+  justify-content: flex-start;
+  justify-content: space-between;
+  /*padding-right: 50%;*/
   
 }
 
-.description__main-text{
+.description__two-columns_main-text{
   display: flex;
 	flex-direction: column;
 	flex-basis: 100%;
@@ -120,107 +121,98 @@
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
-  /*margin-left: 175px;*/
-  margin-right: 4%;
+  text-align: justify;
+  margin: auto;
+  /*justify-content: flex-start;*/
 }
 
 .description_main-text_paragraph{
-  margin-bottom: 10px:
+  margin-bottom: 30px;
 }
-.description_main-text_paragraph_bold{
-  margin-bottom: 10px:
+.description__two-columns_span-accent {
+  font-weight: bold;
+
 }
 
 .digits{
   margin: 100px auto;
-  padding-top: 60px;
-  width: 1100px;
-  
-
 }
 .digits-title{
   width: 60vw;
   line-height: 1.15;
   font-size: 60px;
   font-style: bold;
-  margin-bottom: 20px;
+  margin: 0px auto 20px auto;
   text-align: center;
+  
 
 }
-
 .digits-subtitle{
   width: 60vw;
   line-height: 34px;
   font-size: 24px;
   font-style: normal;
   text-align: center;
+  margin: 0 auto;
 }
-
 .table{
- display: flex;
- flex-wrap: wrap;
- margin-top: 60px;
- margin-left: auto;
- margin-right: 0px;
- margin-bottom: 0px;
- 
-
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px auto 0px auto;
+  justify-content: space-between;
+  width: 1100px;
 }
-.table__heading{
+.table_light{
+ padding-top: 60px;
+ /*border-spacing: 60px;*/
+}
+.table__heading_light{
   margin-bottom: 20px;
   font-style: bold;
   line-height: 1.15;
   font-size: 24px;
 
  }
-
 .table__cell_text_light{
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
  
 }
-
-
 .table__cell_theme_light {
   width: 250px;
   color: black;
   margin-right: 0;
   list-style: none;
   padding: auto;
-
 }
 
 .feynman {
-  display: flex;
-  align-items: center;
   position: relative;
   height: 100vh;
   height: 890px;
   background-color: #f2f2f2;
-  justify-content: space-between;
-  flex-wrap: wrap;
- 
 }
 .feynman__title {
-  display: flex;
   font-size: 120px;
   font-weight: bold;
   line-height: 1.15;
   width: 648px;
   z-index: 3;
   top: 100px;
+  margin: 0px auto 0px auto;
+  position: relative;
+  text-align: center;
 }
-
 .feynman__subtitle {
+  text-align: center;
+  position: relative;
   top: 70px;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
-  z-index: 3;
-  
+  z-index: 10;
 }
-
 .feynman__main-illustration {
   height: 608px;
   width: 765px;
@@ -228,43 +220,38 @@
   bottom: 0px;
   left: 0px;
   z-index: 1;
-  
 }
-
 .feynman__link{
   top: 50vh;
   right: 48px;
-  background-color: cornflowerblue;
+  color: cornflowerblue;
   position: absolute;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
-
 }
 
 .kaufman{
-  margin: 100px auto;
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: black;
   overflow: hidden; 
   width: 100%;
-
+  position: relative;
 }
 .kaufman-title_dark{
   width: 60vw;
+  margin: 0px auto 0px auto;
   line-height: 1.15;
   font-size: 60px;
   font-style: bold;
-  margin-bottom: 20px;
-  margin-top: 90px;
   text-align: center;
   color: white;
-
-  
+  position: relative;
 }
-
 .kaufman-subtitle_dark{
+  margin: 20px auto 0px auto;
+  position: relative;
   width: 60vw;
   line-height: 34px;
   font-size: 24px;
@@ -272,70 +259,55 @@
   text-align: center;
   color: white;
 }
-
 .kaufman__main-illustration_dark {
   height: 877px;
   width: 877px;
   position: absolute;
   z-index: 1;
-  margin-right: -210px;
-  margin-bottom: 0px;
-  
+  right: -210px;
+  bottom: 0px;
+  margin: 0;
 }
-
 .table_dark {
- display: flex;
- flex-wrap: wrap;
- margin-top: 0px;
- margin-left: auto;
- margin-right: auto;
- margin-bottom: 90px;
  list-style: none;
  z-index: 10;
- 
-
+ padding-top: 80px;
 }
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
-  margin-top: 80px;
   z-index: 10;
-
 }
 .table__cell_text_dark{
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
   z-index: 10;
- 
 }
-
 .table__heading_dark{
   margin-bottom: 20px;
   font-style: bold;
   line-height: 1.15;
   font-size: 24px;
   z-index: 10;
-
  }
-
  .footer{
    padding-top: 60px;
    padding-bottom: 90px;
    background-color: black;
  }
 .footer__columns{
-   display: flex;
-   flex-basis: 711px;
+  display: flex;
+  flex-direction: row;
+	flex-wrap: wrap;
+  justify-content: space-between;
+  flex-basis: 711px;
    width: 90%;
-   padding-top: 60px;
    padding-bottom: 40px;
    min-height: 350px;
-   flex-direction: row;
-	 flex-wrap: wrap;
-   
-}
+   position: relative;
+ }
 /*.footer__columns_right{
   width: 50%;
   left: 0px;
@@ -355,20 +327,31 @@
   margin-top: 0px;
   margin-bottom: 0px;
   position: relative;
+  display: flex;
+	flex-direction: column;
+  justify-content: flex-end;
+  justify-content: space-between;
+
  }
  .footer__columns_content_social{
-  margin-left: 0px;
+  left: 0px;
   display: flex;
 	flex-direction: column;
 	flex-basis: 100%;
 	flex: 1;
+  justify-content: flex-end;
+  justify-content: space-between;
+  position: relative;
  }
  .footer__columns_content_info{
   display: flex;
 	flex-direction: column;
 	flex-basis: 100%;
 	flex: 1;
-   margin-left: 40%;
+  left: 40%;
+  justify-content: flex-end;
+  justify-content: space-between;
+  position: relative;
  }
  .logo_place_footer{
   position: absolute;
@@ -398,22 +381,24 @@
 
 }
 .footer__column-links{
+ 
   font-style: normal;
   line-height: 30px;
   font-size: 18px;
   color: white;
-
+  
 }
 .footer__social-icon{
   width: 16px;
   height: 16px;
   margin-right: 10px;
   color: white;
-
 }
 .footer__column-link{
   padding-bottom: 16px;
   height: 60%;
   color: white;
+  display: flex;
+  flex-direction: column;
 }
 
