--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,29 @@
-a{
-  text-decoration: none; 
+a {
+  text-decoration: none;
 }
+
+h2 {
+  padding: 0;
+  margin: 0;
+}
+
+h3 {
+  padding: 0;
+  margin: 0;
+}
+
 .page {
   min-width: 1100px;
+  /* мы ещё не умеем делать мобильную версию сайта, */
+  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
+  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
+  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-
+/* шапка документа*/
 .header {
   display: flex;
   align-items: center;
@@ -20,10 +35,12 @@ a{
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.header__subtitle_link{
+
+.header__subtitle-link {
   color: #2f80ed;
 }
-.logo_place_header{
+
+.logo_place_header {
   position: absolute;
   top: 30px;
   left: 60px;
@@ -31,16 +48,18 @@ a{
   width: 183px;
   z-index: 3;
 }
-.header__title{
+
+.header__title {
   display: flex;
   font-size: 102px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 96px;
   position: relative;
   width: 730px;
   z-index: 3;
   left: 64px;
 }
+
 .header__subtitle {
   position: absolute;
   left: 64px;
@@ -49,16 +68,18 @@ a{
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
-  z-index: 3; 
+  z-index: 3;
 }
+
 .header__main-illustration {
   height: 608px;
   width: 765px;
   position: absolute;
-  bottom: 0px;
-  right: 0px;
+  bottom: 0;
+  right: 0;
   z-index: 2;
 }
+
 .header__square-pic {
   display: flex;
   height: 568px;
@@ -66,41 +87,32 @@ a{
   position: absolute;
   top: 64px;
   background-color: #2f80ed;
-  right: 0px;
+  right: 0;
   z-index: 1;
   margin: auto;
 }
 
-
-.description{  
+/*2 колонки*/
+.description {
   margin-top: 100px;
 }
-.description__two-columns{
+
+.description__two-columns {
   display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
   width: 80vw;
   justify-content: space-between;
-  margin: 0px auto;
+  margin: 0 auto;
 }
-.description__two-columns_brief{
-  display: flex;
-	flex-direction: column;
-	flex-basis: 100%;
-	flex: 1;
+
+.description__two-columns_brief {
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
-  color:  #2f80ed;
-  justify-content: flex-start;
-  justify-content: space-between;
+  color: #2f80ed;
 }
-.description__two-columns_main-text{
-  display: flex;
-	flex-direction: column;
-	flex-basis: 100%;
-	flex: 2;
+
+.description__two-columns_main-text {
   width: 80vw;
   min-width: 784px;
   line-height: 34px;
@@ -108,26 +120,30 @@ a{
   text-align: justify;
   margin: auto;
 }
-.description_main-text_paragraph{
+
+.description__two-columns_main-text_paragraph {
   margin-bottom: 30px;
 }
+
 .description__two-columns_span-accent {
-  font-weight: bold;
+  font-weight: 700;
 }
 
-
-.digits{
+/*Светлая таблица*/
+.digits {
   margin: 100px auto;
 }
-.digits-title{
+
+.digits-title {
   width: 60vw;
   line-height: 1.15;
   font-size: 60px;
-  font-style: bold;
-  margin: 0px auto 20px auto;
+  font-weight: bold;
+  margin: 0 auto 20px auto;
   text-align: center;
 }
-.digits-subtitle{
+
+.digits-subtitle {
   width: 60vw;
   line-height: 34px;
   font-size: 24px;
@@ -135,54 +151,70 @@ a{
   text-align: center;
   margin: 0 auto;
 }
-.table{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0px auto 0px auto;
-  justify-content: space-between;
+
+.table {
   width: 1100px;
+  margin: 0 auto 100px auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-left: 0;
 }
-.table_light{
- padding-top: 60px;
+
+.table-light {
+  padding-top: 60px;
 }
-.table__heading_light{
-  margin-bottom: 20px;
-  font-style: bold;
+
+.table__heading {
+  font-weight: bold;
   line-height: 1.15;
   font-size: 24px;
+}
 
- }
-.table__cell_text_light{
+.table__heading_light {
+  margin-top: 60px;
+}
+
+.table__cell_text {
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
 }
+
+.table__cell_text_light {
+  margin-bottom: 20px;
+}
+
+.table__cell {
+  list-style: none;
+}
+
 .table__cell_theme_light {
   width: 250px;
   color: black;
-  margin-right: 0;
-  list-style: none;
-  padding: auto;
+  padding: 0;
 }
 
-
+/*Фейман*/
 .feynman {
   position: relative;
   height: 100vh;
   height: 890px;
   background-color: #f2f2f2;
 }
+
 .feynman__title {
   font-size: 120px;
-  font-weight: bold;
+  font-weight: 700;
   line-height: 1.15;
   width: 648px;
   z-index: 3;
   top: 100px;
-  margin: 0px auto 0px auto;
+  margin: 0 auto 0 auto;
   position: relative;
   text-align: center;
 }
+
 .feynman__subtitle {
   text-align: center;
   position: relative;
@@ -192,15 +224,17 @@ a{
   line-height: 51px;
   z-index: 10;
 }
+
 .feynman__main-illustration {
   height: 608px;
   width: 765px;
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
   z-index: 1;
 }
-.feynman__link{
+
+.feynman__link {
   top: 50vh;
   right: 48px;
   color: cornflowerblue;
@@ -211,25 +245,27 @@ a{
   align-items: center;
 }
 
-
-.kaufman{
+/*Тёмная таблица*/
+.kaufman {
   background-color: black;
   overflow: hidden;
   width: 100%;
   position: relative;
 }
-.kaufman-title_dark{
+
+.kaufman-title {
   width: 60vw;
   margin: 90px auto 20px auto;
   line-height: 1.15;
   font-size: 60px;
-  font-style: bold;
+  font-weight: bold;
   text-align: center;
   color: white;
   position: relative;
 }
-.kaufman-subtitle_dark{
-  margin: 0px auto 0px auto;
+
+.kaufman-subtitle {
+  margin: 0 auto 0 auto;
   position: relative;
   width: 60vw;
   line-height: 34px;
@@ -238,124 +274,114 @@ a{
   text-align: center;
   color: white;
 }
+
 .kaufman__triangle {
   height: 877px;
   width: 877px;
   position: absolute;
   z-index: 1;
   right: -210px;
-  top: 0px;
+  top: 0;
   margin: 0;
 }
-.table_dark {
- list-style: none;
- z-index: 10;
- padding-bottom: 80px;
- padding-top: 80px;
- padding-left: 0px;
+
+.table_theme-dark {
+  z-index: 10;
+  padding-left: 0;
+  margin-bottom: 90px;
+  align-items: flex-start;
 }
-.table__cell_theme_dark {
+
+.table__cell_theme-dark {
   width: 200px;
   color: white;
   margin-right: 0;
   z-index: 10;
 }
-.table__cell_text_dark{
-  line-height: 1.2;
-  font-size: 18px;
-  font-style: normal;
-  z-index: 10;
-}
-.table__heading_dark{
-  margin-bottom: 20px;
-  font-style: bold;
-  line-height: 1.15;
-  font-size: 24px;
-  z-index: 10;
- }
 
+.table__cell_text_theme-dark {
+  z-index: 10;
+  margin: 0;
+}
 
- .footer{
-   background-color: black;
-   position: relative;
-   padding: 60px auto 40px auto;
- }
-.footer__columns{
-   margin: 0 5% 0 5%;
-   display: flex;
-	 flex-direction: column;
-   flex-wrap: nowrap;
-   flex-basis: 711px;
-   width: 90%;
-   min-height: 350px;
-   position: relative;
- }
- .footer__columns_content_copyright{
-   display: flex;
-   left: 0px;
-   margin: 0;
-   position: absolute;
-   justify-content: flex-start;
- }
- .footer__columns_content_social{
-   right: 0px;
-   display: flex;
-	 flex-direction: column;
-   flex: 1;
-   justify-content: flex-end;
-   position: absolute;
- }
- .footer__columns_content_info{
-  display: flex;
-	flex-direction: column;
-	flex: 1;
-  left: 70%;
-  position: absolute;
-  justify-content: flex-end;
- }
- .logo_place_footer{
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 35px;
-  width: 183px;
-  z-index: 3;
-}
-.footer__autor{
-  position: absolute;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  bottom: 0px;
-  left: 0px;
-  font-style: normal;
-  line-height: 30px;
-  font-size: 18px;
-  color: white;
-}
-.footer__column-heading{
+.table__heading_theme-dark {
   margin-bottom: 20px;
-  font-style: bold;
-  line-height: 25px;
-  font-size: 18px;
+  z-index: 10;
+  margin-top: 80px;
+}
+
+/*Подвал*/
+.footer {
+  background-color: black;
   color: white;
 }
-.footer__column-links{
+
+.footer__columns {
+  margin: 0 5% 0 5%;
   display: flex;
-  font-style: normal;
-  line-height: 30px;
-  font-size: 18px;
-  color: white;
+  flex-basis: 711px;
+  width: 90%;
+  min-height: 350px;
+  padding-top: 60px;
+}
+
+.footer__columns_content-copyright {
+  flex-basis: 711px;
+  display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
-.footer__social-icon{
-  display: inline-block;
+
+.footer__author {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 18px;
+  color: white;
+}
+
+.footer__column-link {
+  margin-bottom: 16px;
+  color: white;
+}
+
+.footer__social-icon {
   width: 16px;
   height: 16px;
   margin-right: 10px;
-  color: white;
 }
-.footer__column-link{
-  padding-bottom: 16px;
-  color: white;
-  line-height: 10px;
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  top: 0;
+  left: 0;
+  z-index: 3;
+}
+
+.footer__columns_content_info {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.footer__columns_content_social {
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
