--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,8 @@ h3 {
   color: #2f80ed;
 }
 
+.logo {}
+
 .logo_place_header {
   position: absolute;
   top: 30px;
@@ -118,11 +120,12 @@ h3 {
   line-height: 34px;
   font-size: 24px;
   text-align: justify;
-  margin: auto;
+  margin: 0 auto;
 }
 
 .description__two-columns_main-text_paragraph {
   margin-bottom: 30px;
+  margin-top: 0;
 }
 
 .description__two-columns_span-accent {
