--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,3 @@
-a {
-  text-decoration: none;
-}
-
-h2 {
-  padding: 0;
-  margin: 0;
-}
-
-h3 {
-  padding: 0;
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -24,6 +10,8 @@ h3 {
 }
 
 /* шапка документа*/
+/* Благодарю за обратную связь, подробно и за то, что есть не только минусы, но и плюсы. 
+Это повышает мотивацию. Надеюсь, что в этот раз поняла про БЭМ )*/
 .header {
   display: flex;
   align-items: center;
@@ -33,14 +21,16 @@ h3 {
   max-height: 756px;
   background-color: #f2f2f2;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 
-.header__subtitle-link {
+.header__link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
-.logo {}
+.logo {
+  z-index: 3;
+}
 
 .logo_place_header {
   position: absolute;
@@ -48,29 +38,31 @@ h3 {
   left: 60px;
   height: 32px;
   width: 183px;
-  z-index: 3;
 }
 
 .header__title {
-  display: flex;
   font-size: 102px;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 96px;
   position: relative;
   width: 730px;
   z-index: 3;
   left: 64px;
+  padding: 0;
+  margin: 0;
 }
 
 .header__subtitle {
   position: absolute;
-  left: 64px;
-  bottom: 30px;
-  width: 388px;
+  left: 0;
+  bottom: 0;
+  max-width: 388px;
   font-size: 18px;
   font-weight: normal;
   line-height: 25px;
   z-index: 3;
+  padding: 0;
+  margin: 0 0 30px 64px;
 }
 
 .header__main-illustration {
@@ -99,133 +91,135 @@ h3 {
   margin-top: 100px;
 }
 
-.description__two-columns {
+.two-columns {
   display: flex;
-  width: 80vw;
+  max-width: 80%;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0;
 }
 
-.description__two-columns_brief {
+.two-columns__brief {
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
   color: #2f80ed;
+  padding: 0;
+  margin: 0;
 }
 
-.description__two-columns_main-text {
-  width: 80vw;
+.two-columns__main-text {
+  max-width: 80%;
   min-width: 784px;
+  margin: 0;
+  padding: 0;
+}
+
+.two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   text-align: justify;
-  margin: 0 auto;
+  padding: 0 0 30px 0;
+  margin: 0;
 }
 
-.description__two-columns_main-text_paragraph {
-  margin-bottom: 30px;
-  margin-top: 0;
+.two-columns__paragraph:last-child {
+  padding-bottom: 0;
 }
 
-.description__two-columns_span-accent {
+.two-columns__span-accent {
   font-weight: 700;
 }
 
 /*Светлая таблица*/
 .digits {
-  margin: 100px auto;
+  margin: 100px 0 100px 0;
 }
 
-.digits-title {
-  width: 60vw;
+.section-title {
+  max-width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   margin: 0 auto 20px auto;
   text-align: center;
+  padding: 0;
 }
 
-.digits-subtitle {
-  width: 60vw;
+.section-subtitle {
+  max-width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-style: normal;
   text-align: center;
   margin: 0 auto;
+  padding: 0;
 }
 
 .table {
   width: 1100px;
-  margin: 0 auto 100px auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
-  padding-left: 0;
-}
-
-.table-light {
-  padding-top: 60px;
+  padding: 0;
+  margin: 0 auto 0 auto;
 }
 
 .table__heading {
   font-weight: bold;
   line-height: 1.15;
   font-size: 24px;
-}
-
-.table__heading_light {
-  margin-top: 60px;
+  padding: 0;
+  margin: 60px 0 20px 0;
 }
 
 .table__cell_text {
   line-height: 1.2;
   font-size: 18px;
   font-style: normal;
-}
-
-.table__cell_text_light {
-  margin-bottom: 20px;
+  padding: 0;
+  margin: 0 0 20px 0;
 }
 
 .table__cell {
   list-style: none;
-}
-
-.table__cell_theme_light {
+  margin: 0;
+  padding: 0;
   width: 250px;
   color: black;
-  padding: 0;
 }
 
 /*Фейман*/
 .feynman {
   position: relative;
-  height: 100vh;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .feynman__title {
   font-size: 120px;
   font-weight: 700;
   line-height: 1.15;
-  width: 648px;
+  max-width: 648px;
   z-index: 3;
-  top: 100px;
-  margin: 0 auto 0 auto;
+  margin: 0 auto;
   position: relative;
   text-align: center;
+  padding: 100px 0 70px 0;
 }
 
 .feynman__subtitle {
   text-align: center;
   position: relative;
-  top: 70px;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
   z-index: 10;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .feynman__main-illustration {
@@ -235,50 +229,59 @@ h3 {
   bottom: 0;
   left: 0;
   z-index: 1;
+  margin: 0;
+  padding: 0;
 }
 
 .feynman__link {
-  top: 50vh;
-  right: 48px;
-  color: cornflowerblue;
+  right: 0;
+  color: #2f80ed;
   position: absolute;
   font-size: 36px;
   font-weight: normal;
   line-height: 51px;
   align-items: center;
+  text-decoration: none;
+  margin: 0 48px 0 0;
+  padding: 0;
 }
 
 /*Тёмная таблица*/
 .kaufman {
-  background-color: black;
+  background-color: #1f1f1f;
   overflow: hidden;
-  width: 100%;
   position: relative;
 }
 
-.kaufman-title {
-  width: 60vw;
+.section-title_theme_dark {
+  max-width: 60%;
   margin: 90px auto 20px auto;
-  line-height: 1.15;
+  text-align: center;
+  color: white;
+  position: relative;
+  padding: 0;
+  z-index: 10;
   font-size: 60px;
   font-weight: bold;
-  text-align: center;
-  color: white;
-  position: relative;
+  line-height: 1.15;
 }
 
-.kaufman-subtitle {
+.section-subtitle_theme_dark {
   margin: 0 auto 0 auto;
   position: relative;
-  width: 60vw;
-  line-height: 34px;
-  font-size: 24px;
-  font-style: normal;
+  max-width: 60%;
   text-align: center;
   color: white;
+  padding: 0;
+  z-index: 10;
+  font-size: 24px;
+  font-weight: normal;
+  line-height: 34px;
 }
 
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
   height: 877px;
   width: 877px;
   position: absolute;
@@ -286,61 +289,75 @@ h3 {
   right: -210px;
   top: 0;
   margin: 0;
+  padding: 0;
 }
 
-.table_theme-dark {
+.table_theme_dark {
   z-index: 10;
-  padding-left: 0;
-  margin-bottom: 90px;
   align-items: flex-start;
+  margin: 0 auto 90px auto;
+  padding: 0;
 }
 
-.table__cell_theme-dark {
+.table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  z-index: 10;
-}
-
-.table__cell_text_theme-dark {
   z-index: 10;
   margin: 0;
+  padding: 0;
 }
 
-.table__heading_theme-dark {
-  margin-bottom: 20px;
+.table__cell_text_theme_dark {
   z-index: 10;
-  margin-top: 80px;
+  margin: 0;
+  margin: 0 auto;
+}
+
+.table__heading_theme_dark {
+  z-index: 10;
+  margin: 80px 0 20px 0;
+  padding: 0;
 }
 
 /*Подвал*/
 .footer {
-  background-color: black;
+  background-color: #1f1f1f;
   color: white;
 }
 
 .footer__columns {
-  margin: 0 5% 0 5%;
   display: flex;
-  flex-basis: 711px;
   width: 90%;
   min-height: 350px;
-  padding-top: 60px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 60px 0 40px 0;
 }
 
-.footer__columns_content-copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex-basis: 711px;
+  margin: 0;
+  padding: 0;
 }
 
 .footer__author {
   line-height: 30px;
   font-size: 18px;
-  font-weight: 700;
-  margin-top: 18px;
-  margin-bottom: 18px;
+  font-weight: normal;
+  margin: 18px 0 18px 0;
+  padding: 0;
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
 .footer__column-links {
@@ -349,20 +366,26 @@ h3 {
   font-weight: normal;
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  margin-bottom: 18px;
   color: white;
+  text-decoration: none;
+  margin: 0 0 18px 0;
+  padding: 0;
+  list-style-type: none;
+
 }
 
 .footer__column-link {
-  margin-bottom: 16px;
-  color: white;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  color: #f2f2f2;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  margin-right: 10px;
+  margin: 0 10px 0 0;
+  padding: 0;
 }
 
 .logo_place_footer {
@@ -370,21 +393,25 @@ h3 {
   height: 35px;
   top: 0;
   left: 0;
-  z-index: 3;
+  margin: 0;
+  padding: 0;
 }
 
-.footer__columns_content_info {
+.footer__column_content_info {
   display: flex;
   flex-direction: column;
   flex: 1;
   justify-content: flex-start;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
-.footer__columns_content_social {
-  right: 0;
+.footer__column_content_social {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  margin: 0;
+  padding: 0;
 }
