--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,6 @@
 }
 
 /* шапка документа*/
-/* Благодарю за обратную связь, подробно и за то, что есть не только минусы, но и плюсы. 
-Это повышает мотивацию. Надеюсь, что в этот раз поняла про БЭМ )*/
 .header {
   display: flex;
   align-items: center;
@@ -47,9 +45,8 @@
   position: relative;
   width: 730px;
   z-index: 3;
-  left: 64px;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 64px;
 }
 
 .header__subtitle {
@@ -62,7 +59,9 @@
   line-height: 25px;
   z-index: 3;
   padding: 0;
-  margin: 0 0 30px 64px;
+  margin: 0;
+  bottom: 30px;
+  left: 64px;
 }
 
 .header__main-illustration {
@@ -103,7 +102,7 @@
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
-  font-style: normal;
+  font-weight: normal;
   color: #2f80ed;
   padding: 0;
   margin: 0;
@@ -129,7 +128,7 @@
 }
 
 .two-columns__span-accent {
-  font-weight: 700;
+  font-weight: bold;
 }
 
 /*Светлая таблица*/
@@ -151,7 +150,7 @@
   max-width: 60%;
   line-height: 34px;
   font-size: 24px;
-  font-style: normal;
+  font-weight: normal;
   text-align: center;
   margin: 0 auto;
   padding: 0;
@@ -174,10 +173,10 @@
   margin: 60px 0 20px 0;
 }
 
-.table__cell_text {
+.table__text {
   line-height: 1.2;
   font-size: 18px;
-  font-style: normal;
+  font-weight: normal;
   padding: 0;
   margin: 0 0 20px 0;
 }
@@ -188,6 +187,10 @@
   padding: 0;
   width: 250px;
   color: black;
+}
+
+.table__text:last-child {
+  margin-bottom: 0;
 }
 
 /*Фейман*/
@@ -234,7 +237,6 @@
 }
 
 .feynman__link {
-  right: 0;
   color: #2f80ed;
   position: absolute;
   font-size: 36px;
@@ -242,8 +244,10 @@
   line-height: 51px;
   align-items: center;
   text-decoration: none;
-  margin: 0 48px 0 0;
+  margin: 0;
+  right: 48px;
   padding: 0;
+  top: 50%;
 }
 
 /*Тёмная таблица*/
@@ -307,7 +311,7 @@
   padding: 0;
 }
 
-.table__cell_text_theme_dark {
+.table__text_theme_dark {
   z-index: 10;
   margin: 0;
   margin: 0 auto;
@@ -332,15 +336,19 @@
   margin: 0 auto;
   box-sizing: border-box;
   padding: 60px 0 40px 0;
+  justify-content: space-between;
 }
 
 .footer__column_content_copyright {
   flex-basis: 711px;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
+}
+
+.footer__column {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__author {
@@ -354,7 +362,7 @@
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   margin: 0 0 20px 0;
   padding: 0;
 }
@@ -397,20 +405,9 @@
 }
 
 .footer__column_content_info {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
   justify-content: flex-start;
-  align-items: center;
-  margin: 0;
-  padding: 0;
 }
 
 .footer__column_content_social {
-  display: flex;
-  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
-  margin: 0;
-  padding: 0;
 }
