--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 @import url(rotation\rotation.css);
+
 @keyframes rotation {
   from {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -97,6 +99,9 @@
   right: 0;
   z-index: 1;
   margin: auto;
+}
+
+.rotation{
   animation: rotation 20s linear infinite normal;
 }
 
@@ -109,13 +114,13 @@
 }
 
 .cards {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 240px);
   margin: 0 auto;
   box-sizing: border-box;
   padding: 0;
-  justify-content: flex-start;
   width: 920px;
-  flex-wrap: wrap;
+  gap: 50px;
 }
 
 .cards__item {
@@ -126,7 +131,7 @@
   text-align: center;
 }
 
-.cards__item:last-child {
+.cards:last-child {
   margin-bottom: 0px;
   justify-content: flex-start;
 }
@@ -146,7 +151,7 @@
   font-size: 24px;
   padding: 0;
   margin: 0 auto 16px auto;
-  
+
 }
 
 .cards__description {
@@ -159,9 +164,11 @@
 }
 
 /*video*/
+
 .video {
-margin: 100px 0 -60px 0;
+  margin: 100px 0 -60px 0;
 }
+
 .video__iframes {
   padding: 0;
   margin: 50px auto 0 auto;
@@ -360,8 +367,9 @@ margin: 100px 0 -60px 0;
   opacity: .45;
   transition: .3s;
 }
+
 /*Khan*/
-.khan{
+.khan {
   margin: 0;
   padding: 105px 0 0 0;
   background-color: #f2f2f2;
@@ -518,12 +526,12 @@ margin: 100px 0 -60px 0;
 }
 
 /*ссылки*/
-.resources{
+.resources {
   margin: 100px 0 217px 0;
   padding: 0;
 }
 
-.resources__logo-zone{
+.resources__logo-zone {
   margin: 80px auto 0 auto;
   padding: 0;
   width: 1100px;
@@ -531,7 +539,7 @@ margin: 100px 0 -60px 0;
   justify-content: center;
 }
 
-.resources__logo{
+.resources__logo {
   display: inline-block;
   margin: 0;
   padding: 0;
