--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -2,7 +2,12 @@
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
-} 
+}
+
+.rotation {
+    animation: rotation 20s linear infinite normal;
+}
