--- a/styles/style.css
+++ b/styles/style.css
@@ -1,111 +1,6 @@
-@import url(rotation\rotation.css);
 
-@keyframes rotation {
-  from {
-    transform: rotate(0deg);
-  }
 
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.page {
-  min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
-  max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
-  margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-/* шапка документа*/
-.header {
-  display: flex;
-  align-items: center;
-  position: relative;
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
-  background-color: #f2f2f2;
-  justify-content: space-between;
-  overflow: hidden;
-}
-
-.header__link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.header__link:hover {
-  opacity: .45;
-  transition: .3s;
-}
-
-.logo {
-  z-index: 3;
-}
-
-.logo_place_header {
-  position: absolute;
-  top: 30px;
-  left: 60px;
-  height: 32px;
-  width: 183px;
-}
-
-.header__title {
-  font-size: 102px;
-  font-weight: bold;
-  line-height: 96px;
-  position: relative;
-  width: 730px;
-  z-index: 3;
-  padding: 0;
-  margin: 0 0 0 64px;
-}
-
-.header__subtitle {
-  position: absolute;
-  max-width: 388px;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 25px;
-  z-index: 3;
-  padding: 0;
-  margin: 0;
-  bottom: 30px;
-  left: 64px;
-}
-
-.header__main-illustration {
-  height: 608px;
-  width: 765px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 2;
-}
-
-.header__square-pic {
-  display: flex;
-  height: 568px;
-  width: 568px;
-  position: absolute;
-  top: 64px;
-  background-color: #2f80ed;
-  right: 0;
-  z-index: 1;
-  margin: auto;
-}
-
-.rotation{
-  animation: rotation 20s linear infinite normal;
-}
-
-/*techniques*/
+/*techniques
 .techniques {
   width: 80%;
   margin: 0 auto;
@@ -161,14 +56,12 @@
   padding: 0;
   margin: 0 auto;
   text-align: center;
-}
+}*/
 
 /*video*/
 
-.video {
-  margin: 100px 0 -60px 0;
-}
 
+/*
 .video__iframes {
   padding: 0;
   margin: 50px auto 0 auto;
@@ -188,8 +81,9 @@
 .video__iframe:first-child {
   margin-right: 20px;
 }
+*/
+/*2 колонки*//*
 
-/*2 колонки*/
 .description {
   margin-top: 100px;
 }
@@ -233,9 +127,9 @@
 
 .two-columns__span-accent {
   font-weight: bold;
-}
+}*/
 
-/*Светлая таблица*/
+/*Светлая таблица
 .digits {
   margin: 100px 0 100px 0;
 }
@@ -258,8 +152,8 @@
   text-align: center;
   margin: 0 auto;
   padding: 0;
-}
-
+}*/
+/*
 .table {
   width: 1100px;
   display: flex;
@@ -295,17 +189,17 @@
 
 .table__text:last-child {
   margin-bottom: 0;
-}
+}*/
 
-/*Оакли*/
+/*Оакли*//*
 .oakley {
   background-color: #f2f2f2;
   padding: 0;
   margin: 0 auto;
   padding-top: 160px;
-}
+}*/
 
-/*Фейман*/
+/*Фейман*//*
 .feynman {
   position: relative;
   min-height: 890px;
@@ -366,9 +260,9 @@
 .feynman__link:hover {
   opacity: .45;
   transition: .3s;
-}
+}*/
 
-/*Khan*/
+/*Khan*//*
 .khan {
   margin: 0;
   padding: 105px 0 0 0;
@@ -448,8 +342,8 @@
   opacity: .45;
   transition: .3s;
 }
-
-/*Тёмная таблица*/
+*/
+/*Тёмная таблица*//*
 .kaufman {
   background-color: #1f1f1f;
   overflow: hidden;
@@ -497,7 +391,6 @@
   padding: 0;
   animation: rotation 20s linear infinite normal;
 }
-
 .table_theme_dark {
   z-index: 10;
   align-items: flex-start;
@@ -524,8 +417,8 @@
   margin: 80px 0 20px 0;
   padding: 0;
 }
-
-/*ссылки*/
+*/
+/*ссылки*//*
 .resources {
   margin: 100px 0 217px 0;
   padding: 0;
@@ -545,10 +438,9 @@
   padding: 0;
   width: 270px;
   height: 38px;
-}
+}*/
 
-
-/*Подвал*/
+/*Подвал*//*
 .footer {
   background-color: #1f1f1f;
   color: white;
@@ -639,4 +531,4 @@
 
 .footer__column_content_social {
   justify-content: flex-start;
-}
+}*/
