--- a/pages/index.css
+++ b/pages/index.css
@@ -23,6 +23,7 @@
 @import url(../blocks/techniques/cards/__image/cards__image.css);
 @import url(../blocks/techniques/cards/__title/cards__title.css);
 @import url(../blocks/techniques/cards/__description/cards__description.css);
+@import url(../blocks/video/video.css);
 @import url(../blocks/video/__iframe/__title/_place_video/section__title_place_video.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
 @import url(../blocks/video/__iframe/video__iframe.css);
